--- a/usr/share/openmediavault/locale/es_ES/openmediavault-website.po
+++ b/usr/share/openmediavault/locale/es_ES/openmediavault-website.po
@@ -8,15 +8,18 @@ msgid ""
 msgstr ""
 "Project-Id-Version: OMV Plugins\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-05-12 11:31+0200\n"
-"PO-Revision-Date: 2012-05-09 19:45+0000\n"
-"Last-Translator: Raul Fernandez Garcia <raulfg3@gmail.com>\n"
+"POT-Creation-Date: 2012-05-26 10:04+0200\n"
+"PO-Revision-Date: 2012-05-25 08:13+0000\n"
+"Last-Translator: Marcel Beck <fo3nik5@gmail.com>\n"
 "Language-Team: Spanish (Spain) (http://www.transifex.net/projects/p/OMVPlugins/language/es_ES/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: es_ES\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
+
+msgid "Allow .htaccess files to override the items selected below."
+msgstr ""
 
 msgid "Allow Override"
 msgstr "Permitir la anulación"
@@ -72,8 +75,8 @@ msgstr "Habilitar conexión segura."
 msgid "Event"
 msgstr "Evento"
 
-msgid "Extra Options"
-msgstr "Opciones Extras"
+msgid "Extra options"
+msgstr ""
 
 msgid "Extra options for the &lt;VirtualHost&gt; directive."
 msgstr "Opciones extras para el  &lt;VirtualHost&gt; directiva."
@@ -101,9 +104,17 @@ msgid ""
 "web interface, this plugin will create a virtual host (a virtual website) in"
 " OpenMediaVault's web server.<Br /><br />In a <b>port based</b> virtual host"
 " configuration, the website configured here will be accessible at the same "
-"IP / name of this OpenMediaVault server, but on a different port. E.g. "
-"http://"
-msgstr "Para crear una pagina web que no entre en conflicto con el interfaz web de OMV, este plugin, creará un host virtual (una web virtual) en el servidor web OpenMediaVault.<Br /><br />In a <b>port based</b> virtual host configuration, La pagina web configurada de esta manera, será accesible en la misma IP/nombre de este servidor, pero en un puerto diferente. Ej: http://192.168.1.250:8090"
+"IP / name of this OpenMediaVault server, but on a different port. E.g. http"
+"://some-host:8500/. When using this type of configuration, be sure that the "
+"website port configured here is not the same port on which OpenMediaVault is"
+" running. This can be checked / changed in System -> General Settings.<Br "
+"/><br>In a <b>name based</b> virtual host configuration, the website "
+"configured here will be accessed as a different host name. E.g. http://some-"
+"host/. Where the name 'some-host' must resolve to the same IP address as "
+"OpenMediaVault. This usually requires that you have a DNS server on your "
+"network, or that a public DNS server has an entry for <b>some-host</b>.<br "
+"/><br />"
+msgstr ""
 
 msgid "Includes"
 msgstr "Includes"
