--- a/usr/share/openmediavault/locale/openmediavault-website.pot
+++ b/usr/share/openmediavault/locale/openmediavault-website.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault-website\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-05-12 11:31+0200\n"
+"POT-Creation-Date: 2012-05-26 10:04+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -16,6 +16,9 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=CHARSET\n"
 "Content-Transfer-Encoding: 8bit\n"
+
+msgid "Allow .htaccess files to override the items selected below."
+msgstr ""
 
 msgid "Allow Override"
 msgstr ""
@@ -65,7 +68,7 @@ msgstr ""
 msgid "Event"
 msgstr ""
 
-msgid "Extra Options"
+msgid "Extra options"
 msgstr ""
 
 msgid "Extra options for the &lt;VirtualHost&gt; directive."
@@ -86,7 +89,7 @@ msgstr ""
 msgid "If a URL which maps to a directory is requested, and there is no DirectoryIndex (e.g., index.html) in that directory, then a formatted listing of the directory will be returned."
 msgstr ""
 
-msgid "In order to create a website that does not conflict with OpenMediaVault's web interface, this plugin will create a virtual host (a virtual website) in OpenMediaVault's web server.<Br /><br />In a <b>port based</b> virtual host configuration, the website configured here will be accessible at the same IP / name of this OpenMediaVault server, but on a different port. E.g. http://"
+msgid "In order to create a website that does not conflict with OpenMediaVault's web interface, this plugin will create a virtual host (a virtual website) in OpenMediaVault's web server.<Br /><br />In a <b>port based</b> virtual host configuration, the website configured here will be accessible at the same IP / name of this OpenMediaVault server, but on a different port. E.g. http://some-host:8500/. When using this type of configuration, be sure that the website port configured here is not the same port on which OpenMediaVault is running. This can be checked / changed in System -> General Settings.<Br /><br>In a <b>name based</b> virtual host configuration, the website configured here will be accessed as a different host name. E.g. http://some-host/. Where the name 'some-host' must resolve to the same IP address as OpenMediaVault. This usually requires that you have a DNS server on your network, or that a public DNS server has an entry for <b>some-host</b>.<br /><br />"
 msgstr ""
 
 msgid "Includes"
