--- a/usr/share/openmediavault/locale/fr_FR/openmediavault-website.po
+++ b/usr/share/openmediavault/locale/fr_FR/openmediavault-website.po
@@ -3,101 +3,103 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
-# Stefan Thrane Overby <stoverby@gmail.com>, 2012.
+# Nahir Mohamed <nahirmoha@gmail.com>, 2012.
+# Stéphane BOCQUET <sbocquet4772@gmail.com>, 2012.
+# Stéphane BOCQUET <stephane_bocquet@hotmail.com>, 2012.
 msgid ""
 msgstr ""
 "Project-Id-Version: OMV Plugins\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-05-26 10:04+0200\n"
-"PO-Revision-Date: 2012-05-25 08:13+0000\n"
-"Last-Translator: Marcel Beck <fo3nik5@gmail.com>\n"
-"Language-Team: Danish (http://www.transifex.net/projects/p/OMVPlugins/language/da/)\n"
+"PO-Revision-Date: 2012-05-25 08:46+0000\n"
+"Last-Translator: Stéphane BOCQUET <stephane_bocquet@hotmail.com>\n"
+"Language-Team: French (http://www.transifex.net/projects/p/OMVPlugins/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: da\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Language: fr\n"
+"Plural-Forms: nplurals=2; plural=(n > 1)\n"
 
 msgid "Allow .htaccess files to override the items selected below."
-msgstr ""
+msgstr "Autoriser le fichier .htaccess à remplacer les éléments sélectionnés ci-dessous."
 
 msgid "Allow Override"
-msgstr "Tillad Tilsidesættelse"
+msgstr "Autoriser la surcharge de configuration"
 
 msgid "Allow PHP scripts to be executed."
-msgstr "Tillad PHP scripts at blive kørt."
+msgstr "Autorise l’exécution des scripts PHP"
 
 msgid "Auth Config"
-msgstr "Godkend Konfig"
+msgstr "Autorisation"
 
 msgid ""
 "Authorization directives (AuthDBMGroupFile, AuthDBMUserFile, AuthGroupFile, "
 "AuthName, AuthType, AuthUserFile, Require, etc.)."
-msgstr "Godkendelss direktiver (AuthDBMGroupFile, AuthDBMUserFile, AuthGroupFile, AuthName, AuthType, AuthUserFile, Kræv, osv.)."
+msgstr "Directives contrôlant les autorisations (AuthDBMGroupFile, AuthDBMUserFile, AuthGroupFile, AuthName, AuthType, AuthUserFile, Require, etc.)"
 
 msgid "Certificate"
-msgstr "Certifikat"
+msgstr "Certificat"
 
 msgid "Configuration Test Failed"
-msgstr "Konfiguration Test Fejlede"
+msgstr "Test de configuration échoué"
 
 msgid "Content negotiated \"MultiViews\" are allowed."
-msgstr "Indhold forhandlet \"MultiViews\" er tilladt."
+msgstr "Les contenus \"MultiViews\" sont autorisés"
 
 msgid "Date & Time"
-msgstr "Dato & Tid"
+msgstr "Date & Heure"
 
 msgid ""
 "Directives controlling directory indexing (AddDescription, AddIcon, "
 "AddIconByEncoding, AddIconByType, DefaultIcon, DirectoryIndex, "
 "FancyIndexing, HeaderName, IndexIgnore, IndexOptions, ReadmeName, etc.)."
-msgstr "Direktiver om kontrol af mappe indeksering (AddDescription, AddIcon, AddIconByEncoding, AddIconByType, DefaultIcon, DirectoryIndex, FancyIndexing, HeaderName, IndexIgnore, IndexOptions og ReadmeName osv.)."
+msgstr "Directives contrôlant l'indexation des répertoires (AddDescription, AddIcon, AddIconByEncoding, AddIconByType, DefaultIcon, DirectoryIndex, FancyIndexing, HeaderName, IndexIgnore, IndexOptions, ReadmeName, etc.)"
 
 msgid "Directives controlling host access (Allow, Deny and Order)."
-msgstr "Direktiver om kontrol af vært adgang (Tillad, Afvis og Orden)."
+msgstr "Directives contrôlant les accès à l'hôte (Allow, Deny and Order)"
 
 msgid ""
 "Directives controlling specific directory features (Options and XBitHack)."
-msgstr "Direktiver om kontrol af bestemt mappe funktioner (Muligheder og XBitHack)."
+msgstr "Directives contrôlant les fonctionnalités spécifiques des dossiers (Options and XBitHack)"
 
 msgid "Document root"
-msgstr "Dokument rod"
+msgstr "Document racine"
 
 msgid "Enable"
-msgstr "Aktiver"
+msgstr "Activer"
 
 msgid "Enable SSL/TLS"
-msgstr "Aktiver SSL/TLS"
+msgstr "Activer SSL/TLS"
 
 msgid "Enable secure connection."
-msgstr "Aktiver sikker forbindelse."
+msgstr "Active les connexions sécurisées"
 
 msgid "Event"
-msgstr "Begivenhed"
+msgstr "Événement"
 
 msgid "Extra options"
-msgstr ""
+msgstr "Options supplémentaires"
 
 msgid "Extra options for the &lt;VirtualHost&gt; directive."
-msgstr "Ekstra muligheder for &lt;VirtuelVært&gt; direktivet."
+msgstr "Options supplémentaires pour la section &lt;Virtualhost&gt;"
 
 msgid "Follow SymLinks"
-msgstr "Følg SymLinks"
+msgstr "Suivre liens symboliques"
 
 msgid "For security reasons, PHP scripts will run as the selected user."
-msgstr "Af sikkerheds grunde, vil PHP scripts blive kørt som den valgte bruger."
+msgstr "Pour des raisons de sécurité, les scripts PHP seront exécutés par l'utilisateur sélectionné."
 
 msgid "General settings"
-msgstr "Generelle indstillinger"
+msgstr "Paramètres généraux"
 
 msgid "Host"
-msgstr "Vært"
+msgstr "Hôte"
 
 msgid ""
 "If a URL which maps to a directory is requested, and there is no "
 "DirectoryIndex (e.g., index.html) in that directory, then a formatted "
 "listing of the directory will be returned."
-msgstr "Hvis en URL, der henleder til et biblioteket bliver anmodet, og der ingen DirectoryIndex er (f.eks index.html) i dette biblioteket, vil en formateret liste af biblioteket blive returneret."
+msgstr "Si une URL correspondant à un répertoire est demandée, et qu'il n'y a aucun DirectoryIndex (ex: index.html) dans ce répertoire, une liste formatée du répertoire sera alors retourné"
 
 msgid ""
 "In order to create a website that does not conflict with OpenMediaVault's "
@@ -117,90 +119,90 @@ msgid ""
 msgstr ""
 
 msgid "Includes"
-msgstr "Indeholder"
+msgstr "Includes"
 
 msgid "Indexes"
-msgstr "Indekser"
+msgstr "Index"
 
 msgid "Limit"
-msgstr "Grænse"
+msgstr "Limite"
 
 msgid "MultiViews"
 msgstr "MultiViews"
 
 msgid "Name based"
-msgstr "Navne baseret"
+msgstr "Basé sur le nom"
 
 msgid "Options"
-msgstr "Muligheder"
+msgstr "Options"
 
 msgid "PHP"
 msgstr "PHP"
 
 msgid "Port based"
-msgstr "Port baseret"
+msgstr "Basé sur le port"
 
 msgid "Secure connection"
-msgstr "Sikker forbindelse"
+msgstr "Connexion sécurisée"
 
 msgid "Select a user ..."
-msgstr "Vælg en bruger ..."
+msgstr "Sélectionner un utilisateur"
 
 msgid "Server-side includes are permitted."
-msgstr "Server-side indehold er tilladt."
+msgstr "Les inclusions serveurs sont autorisées"
 
 msgid "Settings"
-msgstr "Indstillinger"
+msgstr "Paramètres"
 
 msgid "Severity"
-msgstr "Sværhedsgrad"
+msgstr "Sévérité"
 
 msgid "SymLinks If Owner Match"
-msgstr "Symlinks Hvis Ejer Matcher"
+msgstr "Suivre liens symbolique si propriétaire"
 
 msgid "The SSL certificate."
-msgstr "SSL certifikatet."
+msgstr "Le certificat SSL à utiliser."
 
 msgid ""
 "The location of the files to share. Permissions must be at least Users: "
 "read-only."
-msgstr "Placeringen af de filer der skal deles. Tilladelser skal mindst være Bruger: skrivebeskyttet."
+msgstr "Chemin des fichiers à partager. Les permissions doivent au moins être Utilisateurs : lecture-seule."
 
 msgid "The server will follow symbolic links in the document root."
-msgstr "Serveren vil følge symbolske links i dokuments roden."
+msgstr "Le serveur suivra les liens symbolique situés à la racine"
 
 msgid ""
 "The server will only follow symbolic links for which the target file or "
 "directory is owned by the same user id as the link."
-msgstr "Serveren vil kun følge symbolske links hvor destinations fil eller mappe er ejet af den samme bruger id som linket."
+msgstr "Le serveur ne suivra que les liens symboliques du fichier ou du répertoire qui auront les même identifiant utilisateur que le lien lui-même."
 
 msgid ""
 "There was an error in the website's configuration, and it has been disabled "
 "to ensure the OpenMediaVault web interface continues to function. Please "
 "verify that any text entered in Extra Options contains valid configuration "
 "directives. Click Show details to view the configuration test result text."
-msgstr "Der opstod en fejl i hjemmesidens konfiguration, og den er blevet deaktiveret for at sikre at OpenMediaVaults web interface fortsat fungerer. Kontroller venligst, at alt indtastet tekst i Ekstra Muligheder indeholder gyldige konfigurations-direktiver. Klik på Vis detaljer for at se konfigurationens testresultat tekst."
+msgstr "Il y a eu une erreur dans la configuration du site, et il a donc été désactivé afin d'assurer le fonctionnement de l'interface web d'OpenMediaVault. Vérifiez que tous textes saisi dans les 'Options supplémentaires' de configuration contiennent des directives valides. Cliquez sur 'Afficher les détails' pour voir le résultat du du test de configuration."
 
 msgid "User"
-msgstr "Bruger"
+msgstr "Utilisateur"
 
 msgid "Virtual host Type"
-msgstr "Virtuel vært Type"
+msgstr "Type d'hôte virtuel"
 
 msgid "Virtual host hostname"
-msgstr "Virtuel vært værtsnavn"
+msgstr "Nom de domaine de l'hôte virtuel"
 
 msgid "Virtual host port"
-msgstr "Virtuel vært port"
+msgstr "Port de l'hôte virtuel"
 
 msgid "Website"
-msgstr "Hjemmeside"
+msgstr "Site web"
 
 msgid "Website Access Log"
-msgstr "Hjemmeside Tilgangs Log"
+msgstr "Journaux d'accès de site web"
 
 msgid "Website Error Log"
-msgstr "Hjemmeside Fejl Log"
+msgstr "Journaux d'erreur du site web"
 
 msgid "php.ini"
 msgstr "php.ini"
