--- a/usr/share/openmediavault/locale/es_ES/openmediavault-website.po
+++ b/usr/share/openmediavault/locale/es_ES/openmediavault-website.po
@@ -9,8 +9,8 @@ msgstr ""
 "Project-Id-Version: OMV Plugins\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-05-26 10:04+0200\n"
-"PO-Revision-Date: 2012-05-25 08:13+0000\n"
-"Last-Translator: Marcel Beck <fo3nik5@gmail.com>\n"
+"PO-Revision-Date: 2012-05-26 16:15+0000\n"
+"Last-Translator: Raul Fernandez Garcia <raulfg3@gmail.com>\n"
 "Language-Team: Spanish (Spain) (http://www.transifex.net/projects/p/OMVPlugins/language/es_ES/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -19,7 +19,7 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
 
 msgid "Allow .htaccess files to override the items selected below."
-msgstr ""
+msgstr "Permite a los archivos .htaccess remplazar los elementos seleccionados a continuación."
 
 msgid "Allow Override"
 msgstr "Permitir la anulación"
@@ -76,7 +76,7 @@ msgid "Event"
 msgstr "Evento"
 
 msgid "Extra options"
-msgstr ""
+msgstr "Opciones Extra"
 
 msgid "Extra options for the &lt;VirtualHost&gt; directive."
 msgstr "Opciones extras para el  &lt;VirtualHost&gt; directiva."
@@ -114,7 +114,7 @@ msgid ""
 "OpenMediaVault. This usually requires that you have a DNS server on your "
 "network, or that a public DNS server has an entry for <b>some-host</b>.<br "
 "/><br />"
-msgstr ""
+msgstr "Para poder crear una web que no entre en conflicto con el interfaz de  OpenMediaVault's , Este plugin creará un interfaz virtual (una web virtual) en el servidor OpenMediaVault .<Br /><br />In a <b>basada en puerto</b> Configuración del puerto virtual , La web configurada aqui, será accesible en la misma IP/nombre que OMV, pero en un puerto diferente. Ej. http://some-host:8500/. Cuando se use este tipo de configuración, Asegurese de que el puerto no este en uso. Esto puede ser comprobado / Cambiado en Sistema-> Opciones Generales.<Br /><br>En  <b>Basado en Nombre</b>Configuración Virtual del host, La Web así configurada, puede ser accedida con un nombre de host diferente. Ej: http://some-host/. Donde el nombre 'some-host' debe ser resuelto con la misma IP que tiene OMV. Esto normalmente requiere que Vd. tenga un servidor DNS en su red o un servidor publico DNS con una entrada para <b>some-host</b>.<br /><br />"
 
 msgid "Includes"
 msgstr "Includes"
