--- a/usr/share/openmediavault/locale/da_DA/openmediavault-website.po
+++ b/usr/share/openmediavault/locale/da_DA/openmediavault-website.po
@@ -8,9 +8,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: OMV Plugins\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-05-26 10:04+0200\n"
-"PO-Revision-Date: 2012-05-25 08:13+0000\n"
-"Last-Translator: Marcel Beck <fo3nik5@gmail.com>\n"
+"POT-Creation-Date: 2012-06-07 19:25+0200\n"
+"PO-Revision-Date: 2012-05-29 13:13+0000\n"
+"Last-Translator: Stefan Thrane Overby <stoverby@gmail.com>\n"
 "Language-Team: Danish (http://www.transifex.net/projects/p/OMVPlugins/language/da/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -19,7 +19,7 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
 
 msgid "Allow .htaccess files to override the items selected below."
-msgstr ""
+msgstr "Tillad .htaccess filer overskriver de nedenstående valgte emner."
 
 msgid "Allow Override"
 msgstr "Tillad Tilsidesættelse"
@@ -76,7 +76,7 @@ msgid "Event"
 msgstr "Begivenhed"
 
 msgid "Extra options"
-msgstr ""
+msgstr "Ekstra valgmuligheder"
 
 msgid "Extra options for the &lt;VirtualHost&gt; directive."
 msgstr "Ekstra muligheder for &lt;VirtuelVært&gt; direktivet."
@@ -114,7 +114,7 @@ msgid ""
 "OpenMediaVault. This usually requires that you have a DNS server on your "
 "network, or that a public DNS server has an entry for <b>some-host</b>.<br "
 "/><br />"
-msgstr ""
+msgstr "For at oprette en hjemmeside, der ikke konflikter med OpenMediaVaults web interface, vil dette plugin skabe en virtuel vært (en virtuel hjemmeside) i OpenMediaVaults web server.<Br /><br />I en <b>port baseret</b>virtuel værts konfiguration, vil hjemmesiden konfigureret her være tilgængelig på samme IP / navnet på denne OpenMediaVault server, men på en anden port. F.eks http://some-host:8500/. Når du bruger denne type af konfiguration, skal du sørge for, at hjemmesides port konfigureret her, ikke er den samme port som OpenMediaVault kører med. Dette kan kontrolleres / ændres i System -> Generelle indstillinger.<Br /><br>I en <b>navne baseret</b> virtuel værts konfiguration, vil hjemmesiden konfigureret her tilgås som et andet værts navn. F.eks http://some-host/. Hvor navnet \"some-host' svare til den samme IP adresse, som OpenMediaVault. Dette kræver som regel, at du har en DNS-server på dit netværk, eller at en offentlig DNS-server har en indgang til <b>some-host</b>.<br /><br />"
 
 msgid "Includes"
 msgstr "Indeholder"
