--- a/usr/share/openmediavault/locale/ru_RU/openmediavault-website.po
+++ b/usr/share/openmediavault/locale/ru_RU/openmediavault-website.po
@@ -9,9 +9,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: OMV Plugins\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-05-26 10:04+0200\n"
-"PO-Revision-Date: 2012-05-25 08:13+0000\n"
-"Last-Translator: Marcel Beck <fo3nik5@gmail.com>\n"
+"POT-Creation-Date: 2012-06-07 19:25+0200\n"
+"PO-Revision-Date: 2012-05-27 09:22+0000\n"
+"Last-Translator: arturmon82 <arturmon82@gmail.com>\n"
 "Language-Team: Russian (http://www.transifex.net/projects/p/OMVPlugins/language/ru/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -20,7 +20,7 @@ msgstr ""
 "Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2)\n"
 
 msgid "Allow .htaccess files to override the items selected below."
-msgstr ""
+msgstr "Разрешить .htaccess файлы для переопределения элементов, выбранных ниже."
 
 msgid "Allow Override"
 msgstr "Разрешить переопределения"
@@ -77,7 +77,7 @@ msgid "Event"
 msgstr "Событие"
 
 msgid "Extra options"
-msgstr ""
+msgstr "Дополнительные опции"
 
 msgid "Extra options for the &lt;VirtualHost&gt; directive."
 msgstr "Дополнительные опции для &lt;VirtualHost&gt; директивы."
@@ -115,7 +115,7 @@ msgid ""
 "OpenMediaVault. This usually requires that you have a DNS server on your "
 "network, or that a public DNS server has an entry for <b>some-host</b>.<br "
 "/><br />"
-msgstr ""
+msgstr "Для того, чтобы создать сайт, который не вступает в противоречие с веб-интерфейсом OpenMediaVault, этот плагин будет создать виртуальный хост (виртуальный веб-сайт) в веб-сервер в OpenMediaVault.<Br /><br />In a <b>port based</b> конфигурации виртуального хоста, на сайте настроены здесь будут доступны в то же IP / имя сервера OpenMediaVault, но на другом порту. Например http://some-host:8500/. При использовании этого типа конфигурации, убедитесь, что веб-сайт порт, сконфигурированный здесь не в тот же порт, на котором OpenMediaVault работает. Это можно проверить / изменить в системе -.> Общие настройки <Br /><br>In a <b>name based</b>конфигурации виртуального хоста, на сайте настроены здесь будут доступны как под другим именем хоста. Например http://some-host/. Если название 'some-host' должны решить к тому же IP-адрес OpenMediaVault. Это обычно требует наличия сервера DNS в сети, или общедоступного сервера DNS-запись для <b>some-host</b>.<br /><br />"
 
 msgid "Includes"
 msgstr "Включает"
