--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+openmediavault-website (0.3.2) unstable; urgency=low
+
+	* Show extra options label
+	* Update locale
+
+ -- Marcel Beck <marcel.beck@mbeck.org>  Thu, 07 Jun 2012 20:18:32 +0200
+
 openmediavault-website (0.3.1) unstable; urgency=low
 
   * Github Issue FIx #1 - [v0.3.x] Log error
